# bazel-conan

./: .gitignore
Bazel-using-conan/conan/: conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  dependencies.bzl
Bazel-using-conan/main/: demo.cpp
Bazel-using-conan6/: MODULE.bazel  bazel-Bazel-using-conan6  bazel-bin  bazel-out  bazel-testlogs  conanfile.txt
Bazel-using-conan6/conan/: conan_deps_module_extension.bzl  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  dependencies.bzl
bazel-conan-CI-demo8/: .bazelrc  MODULE.bazel  bazel-bazel-conan-CI-demo8  bazel-bin  bazel-out  bazel-testlogs  conanfile.txt
bazel-conan-CI-demo8/.github/workflows/: ci.yml
bazel-conan-CI-demo8/apps/hello/: BUILD.bazel  main.cpp
bazel-conan-CI-demo8/conan/: conan_deps_module_extension.bzl  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  dependencies.bzl
bazel-conan-CI-demo8/conan/nlohmann_json/: BUILD.bazel
bazel-conan-demo/: MODULE.bazel  bazel-bazel-conan-demo  bazel-bin  bazel-out
bazel-conan-demo/apps/demoapp/: BUILD
bazel-conan-demo/apps/demoapp/src/: BUILD
bazel-conan-demo/bazel/: BUILD
bazel-conan-demo/libs/loggerlib/: BUILD  conanfile.py
bazel-conan-demo/libs/loggerlib/include/: logger.hpp
bazel-conan-demo/libs/loggerlib/src/: logger.cpp
bazel-conan-demo7/: .bazelrc  .gitlab-ci.yml  MODULE.bazel
bazel-conan-demo7/.github/: ci.yml
bazel-conan-demo7/apps/hello/: BUILD  main.cpp
bazel-conan-demo7/docker/: Dockerfile  entrypoint.sh
bazel-conan-demo7/tools/conan/: gen_build_wrapper.py  install.sh
bazel-conan5-demo/: bazel-bazel-conan5-demo  bazel-bin  bazel-out  bazel-testlogs
bazel-conan5-demo/apps/demoapp/: CMakeLists.txt  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
bazel-conan5-demo/apps/demoapp/src/: main.cpp
bazel-conan5-demo/bazel/: MODULE.bazel
bazel-conan5-demo/libs/loggerlib/: CMakeLists.txt
bazel-rules-learn/: MODULE.bazel
bazel-rules-learn/examples/: BUILD  template.txt
bazel-rules-learn/examples/app/: BUILD  main.sh
bazel-rules-learn/examples/data/: b.txt
bazel-rules-learn/examples/scripts/: upper.py
bazel-rules-learn/tools/: my_rules.bzl
bazel-using-conan6/: MODULE.bazel  README.md
bazel-using-conan6/conan/: BUILD.bazel  conan_bzl.rc  conan_deps_module_extension.bzl  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  dependencies.bzl
bazel-using-conan6/main/: BUILD
conan-remote-demo/: remotes.sh
conan-remote-demo/loggerlib/: CMakeLists.txt
conan-remote-demo/loggerlib/test_package/: CMakeLists.txt
conan1/hello-conan/: CMakeLists.txt  README  conanfile.txt
conan1/hello-conan/src/: main.cpp
conan1/hello-conan/tests/: CMakeLists.txt  smoketest.cpp
conan2-profiles-recipe/app-profiles-demo/: conanfile.txt
conan2-profiles-recipe/app-profiles-demo/src/: main.cpp
conan2-profiles-recipe/greetlib/: CMakeLists.txt
conan2-profiles-recipe/greetlib/src/: greet.cpp
conan2-profiles-recipe/profiles/: build-gcc  gcc-release
conan2-profiles/app-profiles-demo/: CMakeLists.txt
conan2-profiles/greetlib/: conanfile.py
conan2-profiles/greetlib/src/: greet.cpp
conan3-wrkflows/: CMakeLists.txt  conanfile.py
conan3-wrkflows/greeter/: CMakeLists.txt  CMakePresets.json  Makefile  app.cpp  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  greeter
conan3-wrkflows/include/: hello.h
conan3-wrkflows/src/: hello.cpp
conan3-wrkflows/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
conan3-wrkflows/test_package/src/: example.cpp
conan4-remote-demo/app/: CMakeLists.txt  conanfile.py  main.cpp
conan4-remote-demo/loggerlib/: conanfile.py
conan4-remote-demo/loggerlib/include/loggerlib/: loggerlib.h
conan4-remote-demo/loggerlib/src/: loggerlib.cpp
conan4-remote-demo/loggerlib/test_package/: conanfile.py
conan4-remote-demo/loggerlib/test_package/src/: example.cpp
conan4-remote-demo/profiles/: default
stage1/: bazel-bin  bazel-out  bazel-stage1  bazel-testlogs  bazel_hello_deps.dot  bazel_hello_direct_deps.dot  deps_stage1.dot
stage4/: MODULE.bazel
stage4/main/: BUILD  hello-greet.cc
stage4/test/: BUILD
stage5/: MODULE.bazel
stage5/main/: hello-world.cc
stage5/toolchain/: BUILD  cc_toolchain_config.bzl
stage6-python/: MODULE.bazel
stage6-python/app/: BUILD.bazel  app.py  service.template
stage6-python/tools/: gen.bzl  macros.bzl
stage7-rbe_remote-cache-demo/: .bazelrc  BUILD  MODULE.bazel  hello.cc  hello_test.sh  main.cc
stage8-config-attr-multiplatform/: .bazelrc  BUILD.bazel  MODULE.bazel  arm_source.cc  bazel-bin  bazel-out  bazel-stage8-config-attr-multiplatform  bazel-testlogs  generic_source.cc  main.cc  my_lib.h  x86_source.cc
stage9-py-bazel-demo/: BUILD  MODULE.bazel
stage9-py-bazel-demo/data/: sales_full.csv  sales_small.csv
stage9-py-bazel-demo/dq/: main.py  stats.py
stage9-py-bazel-demo/tests/: dq_test.py
